--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "portfolio",
+  "name": "carlos-portfolio",
   "private": true,
   "version": "0.0.0",
+  "author": "Carlos",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.0.8",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
