--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@fontsource/poppins": "^5.0.8",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
